# icedpp

./: .gitignore  CMakeLists.txt  README.md  cmake.toml  test.cpp
cmake/: FindIced-Wrapper.cmake
iced++/: iced.hpp  iced_internal.hpp  icedpp.sln  icedpp.vcxproj  icedpp.vcxproj.filters
icedpp/: iced.hpp  iced_internal.hpp
icedpp_rust_lib/: Cargo.toml
icedpp_rust_lib/src/: lib.rs
